# project_store

./: catalog.json  droups.json  product.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_views.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html
blog/templatetags/: my_tags_blog.py
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_owner.py  0004_product_publication.py  0005_alter_product_options.py  0006_alter_product_options.py  0007_alter_product_options.py
catalog/templates/: base.html  home.html  product_list.html
catalog/templates/catalog/: product_form.html  product_list.html
catalog/templates/catalog/includes/: menu.html
catalog/templatetags/: my_tags.py
myproject/: settings.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_country_alter_user_phone.py
